<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_peekHeight="56dp"
    android:layoutDirection="ltr"
    android:background="@android:color/white"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
    <ImageView
        android:id="@+id/dialog_placeDetail_changeState"
        android:layout_width="26dp"
        android:layout_height="26dp"
        app:srcCompat="@drawable/ic_keyboard_arrow_up_black_24dp"
        android:layout_gravity="center_horizontal"
        android:background="?attr/selectableItemBackgroundBorderless"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parked_place_detail"
        android:textSize="16dp"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="14dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darker_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/dialog_placeDetail_cName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:text="پژو ۲۰۶"
                android:gravity="left"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/hint_carName"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darker_gray"
            android:layout_marginTop="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/dialog_placeDetail_cColor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:text="آلبالویی"
                android:gravity="left"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/hint_carColor"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darker_gray"
            android:layout_marginTop="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/dialog_placeDetail_cPlaque"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:text="ایران ۲۷ ۳۶۵ب۱۲"
                android:gravity="left"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/plaque"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darker_gray"
            android:layout_marginTop="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/dialog_placeDetail_pDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:text="1396/04/30"
                android:gravity="left"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/date"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darker_gray"
            android:layout_marginTop="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/dialog_placeDetail_pClock"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:text="12:04"
                android:gravity="left"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/clock"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darker_gray"
            android:layout_marginTop="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/dialog_placeDetail_pLocation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="درحال دریافت..."
                android:gravity="left"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/location"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darker_gray"
            android:layout_marginTop="8dp"/>
    </LinearLayout>
</LinearLayout>