<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/specifications_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textDirection="rtl"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:subtitleTextColor="@android:color/white"
        app:titleTextColor="@android:color/white">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:weightSum="2"
       android:orientation="horizontal"
       android:layoutDirection="ltr">
       <LinearLayout
           android:layout_weight="1"
           android:layout_width="0dp"
           android:gravity="center_vertical"
           android:layout_height="match_parent">
           <ImageView
               android:id="@+id/img_save"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="left"
               android:layout_marginLeft="18dp"
               android:clickable="true"
               android:background="?attr/selectableItemBackgroundBorderless"
               app:srcCompat="@drawable/ic_done_white_24dp"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:layout_gravity="center_vertical">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:text="@string/add_new_car"
               android:textColor="@android:color/white"
               android:textSize="18dp"/>
       </LinearLayout>
   </LinearLayout>
    </android.support.v7.widget.Toolbar>
</android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edt_carName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_carName"
                android:padding="12dp"
                android:layout_margin="12dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_margin="12dp">
                <TextView
                    android:id="@+id/tv_carModel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/hint_carModel"
                    android:textSize="18sp"
                    android:gravity="right|center_vertical"
                    android:drawableLeft="@drawable/ic_arrow_drop_down_gary_24dp"
                    android:clickable="true"
                    android:padding="8dp"
                    android:background="?attr/selectableItemBackground"/>
                <Spinner
                    android:id="@+id/sp_carColor"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>
            <include layout="@layout/pelak"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="48dp"
                />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>